SQL indexing works (all users need to install mysql-server, set up user as "username: root, password: biometrics")